# autopayer-banco-de-bogota-empresas

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: settings.py
app/domain/: use_autopayer.py
app/utils/: autopayer.py  format_dataframe.py
